Ajuste de resumo
